log
Sat Apr  9 03:54:11 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|5
total_score: 20/70
24ca96f
Sat Apr  9 03:57:41 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|5
total_score: 20/70
e889f84
Sat Apr  9 22:49:53 UTC 2022: 
 hashmap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
hashmap.c: In function ‘createMap’:
hashmap.c:70:10: error: return from incompatible pointer type [-Werror=incompatible-pointer-types]
   return mapa;
          ^~~~
cc1: all warnings being treated as errors
Compilation failed
b746bfe
Sat Apr  9 22:54:06 UTC 2022: 
 hashmap.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
 tests:  5|5
total_score: 20/70
9a47633
Sat Apr  9 22:57:07 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|5
total_score: 20/70
314049f
Sat Apr  9 22:58:50 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|5
total_score: 20/70
4dabf16
Sat Apr  9 23:04:21 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
hashmap.c: In function ‘searchMap’:
hashmap.c:82:10: error: unused variable ‘capacidad’ [-Werror=unused-variable]
     long capacidad = hash(key, map->capacity);
          ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
7983f11
Sat Apr  9 23:04:38 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|4
total_score: 30/70
4e2d2fe
Sat Apr  9 23:10:35 UTC 2022: 
 hashmap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  8|4
total_score: 30/70
967f44d
Sat Apr  9 23:28:34 UTC 2022: 
 hashmap.c | 13 ++++++++-----
 1 file changed, 8 insertions(+), 5 deletions(-)
In file included from test.c:4:0:
hashmap.c: In function ‘createMap’:
hashmap.c:68:3: error: conversion to non-scalar type requested
   HashMap map = (HashMap) malloc(sizeof(HashMap));
   ^~~~~~~
hashmap.c:69:7: error: invalid type argument of ‘->’ (have ‘HashMap {aka struct HashMap}’)
   map -> buckets = calloc(capacity,sizeof(Pair));
       ^~
hashmap.c:70:7: error: invalid type argument of ‘->’ (have ‘HashMap {aka struct HashMap}’)
   map -> buckets[0] = NULL;
       ^~
hashmap.c:71:7: error: invalid type argument of ‘->’ (have ‘HashMap {aka struct HashMap}’)
   map -> size = 0;
       ^~
hashmap.c:72:7: error: invalid type argument of ‘->’ (have ‘HashMap {aka struct HashMap}’)
   map -> capacity = capacity;
       ^~
hashmap.c:73:7: error: invalid type argument of ‘->’ (have ‘HashMap {aka struct HashMap}’)
   map -> current = -1;
       ^~
hashmap.c:74:10: error: incompatible types when returning type ‘HashMap {aka struct HashMap}’ but ‘HashMap * {aka struct HashMap *}’ was expected
   return map;
          ^~~
hashmap.c:75:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
aaf57b2
Sat Apr  9 23:30:50 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 40/70
5a2b2c7
Sat Apr  9 23:35:40 UTC 2022: 
 hashmap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  10|3
total_score: 40/70
649e1ac
Sat Apr  9 23:37:40 UTC 2022: 
 hashmap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  0|0
e1fc17b
Sat Apr  9 23:38:57 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
2eb8aa7
Sat Apr  9 23:39:35 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  12|2
total_score: 50/70
72e7bfb
Sat Apr  9 23:44:35 UTC 2022: 
 hashmap.c | 9 ++++-----
 1 file changed, 4 insertions(+), 5 deletions(-)
In file included from test.c:4:0:
hashmap.c: In function ‘firstMap’:
hashmap.c:108:27: error: ‘key’ undeclared (first use in this function); did you mean ‘key_t’?
   long search_key = hash (key, map->capacity)
                           ^~~
                           key_t
hashmap.c:108:27: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:109:3: error: expected ‘,’ or ‘;’ before ‘while’
   while (map->buckets[search_key]->key !=NULL){
   ^~~~~
Compilation failed
892df48
Sat Apr  9 23:44:44 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
hashmap.c: In function ‘firstMap’:
hashmap.c:108:27: error: ‘key’ undeclared (first use in this function); did you mean ‘key_t’?
   long search_key = hash (key, map->capacity);
                           ^~~
                           key_t
hashmap.c:108:27: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
3cc2258
Sat Apr  9 23:46:28 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
53c6992
